mini-Feature for clarat-org/clarat#902 - redirect routes for old fr translations

--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -1242,6 +1242,7 @@ ru:
     unsubscribe: unsubscribe
     update_requests: "обновить-запросы"
     users: "пользователь"
+    liste: 
   shareds:
     forms:
       fill_field: "Пожалуйста, заполни это поле"
