--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -1120,6 +1120,7 @@ ar:
     unsubscribe: unsubscribe
     update_requests: "طلبات-تحديث"
     users: "مستخدم"
+    liste: 
   shareds:
     forms:
       fill_field: "من فضلك إملأ هذه الخانة"
