--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1737,6 +1737,9 @@ de:
     unsubscribe: unsubscribe
     update_requests: update_requests
     users: nutzer
+    fr: fr
+    liste: liste
+    liste-de-services: liste-de-services
   shareds:
     forms:
       fill_field: Bitte fülle dieses Feld aus
