--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1434,6 +1434,7 @@ en:
     unsubscribe: unsubscribe
     update_requests: update_requests
     users: users
+    liste: 
   shareds:
     forms:
       fill_field: Please fill out this field
