--- a/config/locales/fr.yml
+++ b/config/locales/fr.yml
@@ -1198,6 +1198,7 @@ fr:
     unsubscribe: unsubscribe
     update_requests: update_requests
     users: utilisateur
+    liste: 
   shareds:
     forms:
       fill_field: veuillez remplir ce champ
