--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -1251,6 +1251,7 @@ pl:
     unsubscribe: unsubscribe
     update_requests: odśwież
     users: użytkownicy
+    liste: 
   shareds:
     forms:
       fill_field: Proszę wypełnij to pole
