--- a/config/locales/tr.yml
+++ b/config/locales/tr.yml
@@ -1140,6 +1140,7 @@ tr:
     unsubscribe: unsubscribe
     update_requests: update_request
     users: kullanıcılar
+    liste: 
   shareds:
     forms:
       fill_field: Lütfen bu alanı doldur
