clarat-org/clarat#914 - added new pictures and texts for about-us page

--- a/config/locales/ar.yml
+++ b/config/locales/ar.yml
@@ -913,29 +913,48 @@ ar:
     about:
       amina: "أخصائية إجتماعية. هذا يعني أنها تعرف الكثير عن المجتمع. فهي تلاحظ بسرعة ما هو مهم. في كلارات هي تعمل مع فريق البحث وتقرر أي العروض يصلح ليكون ضمن عروض كلارات. أعنيتها المفضلة هي لابريما ايستيت ل. إيرلند أوي."
       andrea: "درست إدارة متعددة الثقافات. هذه يعني أنها تعرف عن الإقتصاد والثقافة. هي تعمل بدقة شديدة. في كلارات هي عضوة بالفريق البحثي وتتأكد من جودة العمل هنا. أعنيتها المفضلة هي ورك مي ل. بلاك كيس."
+      anja: Ist Ökologin und Ingenieurin. Sie kann schnell und logisch denken. Bei clarat ist sie im Research-Team. Und sie sichert die Qualität unserer Arbeit. Ihr Lieblingssong ist Where is my mind von den Pixies.
+      anna: Ist Philologin. Das heißt, sie weiß viel über Sprachen. Und sie kennt sich mit Literatur aus. Sie kann gut komplizierte Sachen verstehen. Bei clarat ist sie im Research-Team. Ihr Lieblingssong ist 1009 von Bonobo.
       anne: "درست إقتصاد وعلاقات عامة. هي سريعة جدا في التفكير المنطقي. في كلارات هي المديرة. وهي تتابع عمل الفريق بأكمله وتقوم بتنظيم كل شئ. أعنيتها المفضلة هي دنكين زي جروس ل. دايشكند."
       astrid: "خبيرة سياسية. هذا يعني أنها تعرف الكثير عن السياسة والمجتمع.  هي دائما مرحة وتعكس هذا على الآخرين. هي عضوة في فريق البحث لدى كلارات. أعنيتها المفضلة هي يو جوت مي ل. زاروتس فييت. إريكا بادو."
       basti: "مطور ويب. هذا يعني أنه على معرفة جيدة ببرمجة مواقع وصفحات الإنترنت. في كلارات هو مدير الآي تي أو تكنولوجيا المعلومات. فهو يساعدنا في المشاكل التقنية, كما يقوم بأعمال أخري تتعلق بالإجازات وعقود العمل. أغنيته المفضلة هي مان ان زا ميرور ل. مايكل جاكسون."
       bettina: "بيتينا درست علوم الإدارة غير الربحية. هذه يعني أنها تعرف كيف يتم تنظيم مساعدات. هي بارعة في إنجاز العمل بشكل مرتب. في كلارات هي عضوة في الفريق البحثي؛ فهي تبحث في الإنترنت عن منظمات. أغنيتها المفضلة هي إلياس ل. ديسباتش"
+      birte: Hat Erziehungswissenschaften studiert. Sie kennt sich gut mit Kindern aus. Und sie kann sich gut in andere hineinversetzen. Sie hat auch viel mit Medien gearbeitet. Bei clarat ist sie im Research-Team. Ihr Lieblingssong ist Borderline von Madonna.
+      chrissy: Ist Politikwissenschaftlerin. Das heißt, sie weiß viel über Politik und Gesellschaft. Sie kann gut planen und ordnen. Bei clarat ist sie im Research-Team. Und sie sucht im Internet nach Organisationen. Ihr Lieblingssong ist Rough Hands von Alexisonfire.
+      claudia: Hat vor clarat im Einzelhandel gearbeitet. Sie kann gut mit Menschen umgehen. Und schnell Informationen sammeln. Bei clarat ist sie im Research-Team. Und sie hilft unseren Nutzern weiter. Ihr Lieblingssong ist Chandelier von Sia.
+      eleonore: Hat Musik, Medien und Wirtschaft studiert. Sie kann schnell Informationen sammeln und verstehen. Bei clarat ist sie im Research-Team. Und sie sorgt dafür, dass Nutzer clarat gut im Internet finden können. Ihr Lieblingssong ist Je Veux von Zaz.
       elisa: "خبيرة ثقافية. هذا يعني أنها تعرف الكثير عن الثقافات. يمكنها شرح الأمور الصعبة. في كلارات هي عضوة في فريق البحث. هي تقوم أيضا بالعمل في معجم كلارات وتتواصل مع مستخدمي الصفحة. أعنيتها المفضلة هي بوت بيهيند ل. كنجس اوف كونفينينس"
+      esther: Hat Kulturwissenschaften studiert. Sie kennt sich gut mit Geschichte und Politik aus. Und lernt schnell neue Dinge. Bei clarat ist sie im Research-Team und kümmert sich um unser Lexikon. Ihr Lieblingssong ist This charming man von The Smiths.
       franziska: "خبيرة في القانون الدولي. هذا يعني أنها على دراية جيدة بالقوانين التي تطبق على كل الدول. هي قادرة على فهم الأمور المعقدة جيدا وإيجاد حلول سريعة. في كلارات هي عضوة في فريق البحث. أغنيتها المفضلة هي اكسبلانيشنس ل. سيلاه سوي"
       heading: "من وراء كلارات؟"
+      jacinta: Hat Deutsch und Französisch studiert. Ihre Muttersprache ist Englisch. Sie kann gut einfach und klar schreiben. Bei clarat ist sie um Übersetzer-Team und übersetzt clarat ins Englische. Ihr Lieblingssong ist Wannabe von den Spice Girls.
+      jakob: Ist Asien- und Afrikawissenschaftler. Das heißt, er weiß viel über diese Kontinente. Er bleibt auch bei Stress immer ruhig. Bei clarat ist er im Research-Team. Und er sucht im Internet nach Organisationen. Sein Lieblingssong ist Simplicity von Mbarga.
       janina: "خبيرة في الإنتروبولوجيا الثقافية هذا يعني أنها تعرف الكتير عن الإنسان والثقافات. هي تكتب بشكل جيد. في كلارات هي عضوة في فريق البحث وخبيرة في لغة كلارات الخاصة كما تساعد المستخدمين. أعنيتها المفضلة هي ام اف جي ل. فانتا فور"
       janne: "ياننا درست سياسة وعلاقات دولية. يمكنها تنظيم وقتها بشكل جيد. في كلارات هي عضوة في فريق البحث وهي تقرر أي العروض يصلح ان يكون من ضمن عروض كلارات. أعنيتها المفضلة هي سويت ل. راي إكس."
+      jenny: 'Ist Sozialanthropologin. Das heißt, sie weiß viel über Menschen und Kulturen. Sie findet immer eine Lösung. Bei clarat ist sie im Research-Team. Und sie sorgt für Ordnung auf unserer Internetseite. Ihr Lieblingssong ist I sing I swim von Seabear. '
       jens: "خبير تربوي. هذا يعني أنه على دراية بالتعليم. هو يفهم الأشياء المعقدة بسرعة. في كلارات هو عضو في فريق البحث ويقرر أي العروض يصلح لكلارات. أغنيته المفضلة هي تو بي تو ل. لامبشوب."
       jule: "باحثة في دراسات السلام والصراعات. هذا يعني أنها على دراية بكثير من الصراعات والحروب. هي قادرة على إيجاد حلول. في كلارات هي عضوة في فريق البحث وتتأكد من جودة العمل. أعنيتها المفضلة هي هوم ل. إدوارد شارب."
       julia: "خبيرة لغة ألمانية. هذا يعني أنها على دراية جيدة باللغة الألمانية وكتابة النصوص. يمكنها الكتابة بشكل جيد وكذلك تفسير الأمور بشكل بسيط. في كلارات هي عضوة في فريق البحث وخبيرة في لغة كلارات الخاصة. أعنيتها المفضلة هي ريكونر ل. راديوهيد. "
       julian: "خبير في الإقتصاد الإجتماعي. هذا يعني أنه يعرف الكثير عن الإقتصاد والمجتمع. هو على دراية جيدة أيضا بالكمبيوتر. في كلارات هو عضو في فريق البحث كما يقوم بأعمال تقنية أخرى. أغنيته المفضلة هي آول يو نيد ل. سابليما."
+      juliane: Hat Betriebswirtschaftslehre und Tourismus studiert. Sie kann gut planen. Und sie findet immer eine Lösung. Bei clarat kümmert sie sich um das Marketing. Ihr Lieblingssong ist Easy von The Commodores.
+      karo: Hat Europawissenschaften studiert. Das heißt, sie weiß viel über europäische Politik. Sie kann gut organisieren. Bei clarat ist sie im Research-Team. Und sie kümmert sich um unser Handbuch. Ihr Lieblingssong ist Alive von Pearl Jam.
       katinka: |
         أخصائية نفسية. هذا يعني أنها تستطيع أن تفهم السلوك والمشاعر الإنسانية جيدا. كما يمكنها ترتيب الأمور المعقدة. في كلارات هي عضوة في فريق البحث. أغنيتها المفضلة هي زا جريتست ل. كات بور.
+      katja: Ist Germanistin. Sie kennt sich gut mit komplizierten Texten aus. Und mit der deutschen Sprache. Bei clarat ist sie im Research-Team. Ihr Lieblingssong ist Mysteries von Beth Gibbons.
       konstantin: "مطور ويب. هذا يعني أنه يستطيع بشكل جيد أن يبرمج صفحات إنترنت. هو يجد دائما حلولا جيدة. في كلارات هو عضو في فريق الآي تي أو تكنولوجيا المعلومات ويقوم بعمل صفحات الإنترنت الخاصة بنا. أغنيته المفضلة هي توو لونج ل. دافت بونكت."
-      laura: "درست دراسات جنوب آسيا وأبحاث التطورات الجغرافية. هذا يعني أنها على دراية جيدة بالدول النامية. لديها دائمة نظرة عامة للأمور. في كلارات هي عضوة في فريق البحث. أغنيتها المفضلة هي بينت ات بلاك ل.دينرولينج ستونس."
+      laura_i: Ist Reiseverkehrskauffrau und Kulturwissenschaftlerin. Sie kann gut organisieren. Sie behält immer den Überblick und sie lernt gern neue Sachen. Bei clarat ist sie im Research-Team. Ihr Lieblingssong ist Proud Mary von Ike und Tina Turner.
+      laura_w: "درست دراسات جنوب آسيا وأبحاث التطورات الجغرافية. هذا يعني أنها على دراية جيدة بالدول النامية. لديها دائمة نظرة عامة للأمور. في كلارات هي عضوة في فريق البحث. أغنيتها المفضلة هي بينت ات بلاك ل.دينرولينج ستونس."
       lavinia: "باحثة في دراسات السلام والصراعات. هذا يعني أنها تعرف الكثير عن الصراعات والحروب. يمكنها اقناع الآخرين بأفكار ما. في كلارات هي عضوة في فريق البحث وتقوم بترتيب العروض حسب الموضوع. أعنيتها المفضلة هي آيام نوت دون ل.فيفر راي."
       line: "مخرجة مسرحية. وهي أيضا على دراية جيدة بالأدب واللغة. لذلك تعرف كيفية تأثير الكلمات على الناس. في كلارات هي عضوة في فريق البحث. أغنيتها المفضلة هي آني بودي سيين ماي بيبي ل. دينرولينج ستونس."
       lisa: "مصممة إبتكارات. هذا يعني أنها يمكنها تخطيط مشروعات بشكل مبتكر. في كلارات هي عضوة في فريق البحث وتقوم بوضع خطط وتتواصل مع مستخدمي صفحة كلارات. أغنيتها المفضلة هي آنوزر داي ل. جيمي ليدل."
       marcus: "مصمم ويب. هذا يعني أنه يستطيع برمجة صفحات الإنترنت والشكل العام للصفحة. هو أيضا واضع خطط جيد. في كلارات هو عضو بفريق الآي تي أو تكنولوجيا المعلومات. ويعتني بجعل صفحات الإنترنت الخاصة بنا تبدو في شكل جيد. أغنيته المفضلة هي هيستيريا ل. موسي"
+      michaela: Hat Wirtschaftsinformatik studiert. Sie kann andere Menschen begeistern. Und sie kennt sich gut mit neuen Medien aus. Bei clarat ist sie im Research-Team. Und sie sorgt dafür, dass unsere Internetseite gut funktioniert. Ihr Lieblingssong ist Digital Love von Daft Punk.
+      nahla: 'Ist Archäologin. Sie weiß viel über die Geschichte der Menschheit. Sie kann schnell arbeiten. Bei clarat ist sie im Übersetzter-Team und übersetzt clarat ins Arabische. Ihr Lieblingssong ist Nassam Allina El Hawa von Fayrouz. '
+      nathalie: 'Hat Menschenrechte und internationale Politik studiert. Sie kann gut erklären. Und gut zuhören. Bei clarat ist sie im Research-Team. Ihr Lieblingssong ist Me in You von Kings of Convenience. '
       nicole: "درست علوم التواصل بين الثقافات. هذا يعني أنها تعرف الكثير عن الثقافات و اللغة. قادرة على اتخاذ قرارات جيدة. هي مديرة لفريق البحث. أغنتها المفضلة هي بالابرا مي آمور ل. شاكا بونك."
       nils: "خبير في الكمبيوتر والمعلومات. هذا يعني أنه يستطيع برمجة الكمبيوتر وصفحات الإنترنت. لديه دائما حل جيد كما انه يتعلم بسرعة. في كلارات هو عضو بفريق الآي تي أو تكنولوجيا المعلومات. أغنيته المفضلة هي يين ل. فييتس بروت."
+      philipp: Hat Geschichte, Politik und Recht studiert. Er weiß viel über Politik und Gesellschaft. Er kann gut komplizierte Sachen verstehen. Bei clarat ist er im Research-Team. Sein Lieblingssong ist This Is Our Science von Astronautalis.
+      sabine: Ist Soziologin. Das heißt, sie weiß viel über die Gesellschaft. Sie kann gut komplizierte Sachen verstehen. Bei clarat ist sie im Research-Team. Und sie erklärt uns die deutschen Asylgesetze. ihr Lieblingssong ist Vesna von Kino.
       stefan: "خبير ثقافي. هذا يعني أنه يعرف الكثير عن الثقافة والمجتمع. يمكنه إثارة إهتمام الناس لشئ ما ,هو من إبتكر فكرة كلارات. أغنيته المفضلة هي ريدرس اون زا ستورم ل. زا دورس."
       text: "كلارات هو مشروع تابع لمؤسسة بنكيزير الخيرية للمستقبل  (www.benckiser-stiftung.org) .\n نحن ننهض من خلال مؤسسة بنكيزيز منذ عدة سنوات بمشروعات فعالة لدعم الأطفال والشباب. \nوكنا نلاحظ دائما آنه من الصعب معرفة إذا ما كان هناك عروض للدعم. لذلك أصبح من الواضح لدينا:\n إذا كان بالفعل من الصعب علينا كخبراء أن نحصل على فكرة عامة؛ فكيف سيكون الأمر بالنسبة للأطفال والشباب والأسرة الذين يحتاجون بالفعل للمساعدة؟ \nأو بالنسبة للاجئين الذين في الأصل ليس لهم معرفة بإلمانيا بعد؟ \nفكانت الإجابة على هذه الإسئلة هي: صعب جدا! من هنا جاءت الفكرة لتولد كلارات: \n لإيجاد المساعدةبسهولة للأسرة عن طريق كلارات الأسرة وللاجئين عن طريق كلارات اللاجئين."
       tine: "أخصائية إجتماعية. هي تستمع للناس بشكل جيد. كما أنها مؤلفة. هذا يعني أنها تجيد اللغة وتكتب قصص جميلة. في كلارات هي عضوة في فريق البحث. أعنيتها المفضلة هي سيرفيف إت ل. جوستبويت."
@@ -1108,6 +1127,7 @@ ar:
     haeufige-fragen: "أسئلة-شائعة"
     home: 
     impressum: "هيئة التحرير"
+    liste: 
     new: "جديد"
     offers: "عروض"
     organizations: "منظمة"
