removed german text placeholders in all locales except english

--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -1237,7 +1237,7 @@ de:
           href: https://twitter.com/claratpunktorg
       head:
         title:
-          family:
+          family: 
       modal:
         beta_modal:
           link: schreibe uns einfach eine Nachricht.
@@ -1658,14 +1658,14 @@ de:
       title: Datenschutz
     section_choice:
       family:
-        title:
+        title: 
       refugees:
-        title:
+        title: 
       section_choice:
         family:
-          title:
+          title: 
         refugees:
-          title:
+          title: 
       title: Bitte wähle deine clarat-Welt
     shared:
       address:
@@ -1683,10 +1683,12 @@ de:
     definitions: definitions
     emails: emails
     faq: haeufige-fragen
+    fr: fr
     haeufige-fragen: haeufige-fragen
     home: home
     impressum: impressum
-    liste: liste
+    liste: 
+    liste-de-services: liste-de-services
     new: new
     offers: angebote
     organizations: organisationen
@@ -1699,9 +1701,6 @@ de:
     unsubscribe: unsubscribe
     update_requests: update_requests
     users: nutzer
-    fr: fr
-    liste: liste
-    liste-de-services: liste-de-services
   shareds:
     forms:
       fill_field: Bitte fülle dieses Feld aus
