--- a/config/locales/pl.yml
+++ b/config/locales/pl.yml
@@ -1039,51 +1039,51 @@ pl:
     about:
       amina: Jest socjologiem. To znaczy, że wie dużo o społeczeństwie. Szybko orientuje się, co jest ważne. W clarat jest w zespole badawczym. Ona decyduje, co znajdzie się w ofertach claratu. Jej ulubionym utworem jest “La Prima Estate” Erlenda Oye.
       andrea: 'Studiowała Zarządzanie Międzykulturowe. To znaczy, że wie dużo o gospodarce i kulturze. Jest bardzo dokładna w swojej pracy. W clarat jet częścią zespołu badawczego. Andrea zabezpiecza jakość naszej pracy. Jej ulubiony utwór to: “Work Me” The Black Keys.'
-      anja: Ist Ökologin und Ingenieurin. Sie kann schnell und logisch denken. Bei clarat ist sie im Research-Team. Und sie sichert die Qualität unserer Arbeit. Ihr Lieblingssong ist Where is my mind von den Pixies.
-      anna: Ist Philologin. Das heißt, sie weiß viel über Sprachen. Und sie kennt sich mit Literatur aus. Sie kann gut komplizierte Sachen verstehen. Bei clarat ist sie im Research-Team. Ihr Lieblingssong ist 1009 von Bonobo.
+      anja: 
+      anna: 
       anne: |-
         Studiowała Gospodarkę i Stosunki Międzynarodowe. Potrafi bardzo szybko logicznie myśleć. W clarat jest szefem.
         Opiekuje się całym zespołem i organizuje wszystko. Jej ulubionym utworem jest: “Denken Sie Groß” formacji Deichkind.
       astrid: "Jest politologiem. To znaczy, że wie dużo o polityce i społeczeństwie. Ma zawsze dobry humor i zaraża nim wszystkich. W \nclarat jest w zespole badawczym. Jej ulubiony utwór to: ”You Got Me” zespołu The Roots feat. Erykah Badu."
       basti: 'Jest web developerem.To znaczy, że potrafi dobrze programować strony internetowe. W clarat jest kierownikiem zespołu IT. Pomaga przy zadaniach technicznych oraz zajmuje się sprawami urlopowymi i umowami. Jego ulubionym utworem jest: “Man in The Mirror” Michaela Jacksona.'
       bettina: Bettina studiowała zarządzanie non-profit. To znaczy, że wie, jak zorganizować pomoc. Potrafi też świetnie wszystko uporządkować. W clarat jest w zespole badawczym i zajmuje się wyszukiwaniem organizacji w internecie. Jej ulubionym utworem jest “Elias” grupy Dispatch.
-      birte: Hat Erziehungswissenschaften studiert. Sie kennt sich gut mit Kindern aus. Und sie kann sich gut in andere hineinversetzen. Sie hat auch viel mit Medien gearbeitet. Bei clarat ist sie im Research-Team. Ihr Lieblingssong ist Borderline von Madonna.
-      chrissy: Ist Politikwissenschaftlerin. Das heißt, sie weiß viel über Politik und Gesellschaft. Sie kann gut planen und ordnen. Bei clarat ist sie im Research-Team. Und sie sucht im Internet nach Organisationen. Ihr Lieblingssong ist Rough Hands von Alexisonfire.
-      claudia: Hat vor clarat im Einzelhandel gearbeitet. Sie kann gut mit Menschen umgehen. Und schnell Informationen sammeln. Bei clarat ist sie im Research-Team. Und sie hilft unseren Nutzern weiter. Ihr Lieblingssong ist Chandelier von Sia.
-      eleonore: Hat Musik, Medien und Wirtschaft studiert. Sie kann schnell Informationen sammeln und verstehen. Bei clarat ist sie im Research-Team. Und sie sorgt dafür, dass Nutzer clarat gut im Internet finden können. Ihr Lieblingssong ist Je Veux von Zaz.
+      birte: 
+      chrissy: 
+      claudia: 
+      eleonore: 
       elisa: Jest kulturoznawcą. To znaczy, że wie dużo o kulturze. Potrafi też łatwo wytłumaczyć skomplikowane rzeczy. W clarat jest w zespole badawczym. Zajmuje się również leksykonem i użytkownikami. Jej ulubiony utwór to “Boat Behind” zespołu Kings of Convenience.
-      esther: Hat Kulturwissenschaften studiert. Sie kennt sich gut mit Geschichte und Politik aus. Und lernt schnell neue Dinge. Bei clarat ist sie im Research-Team und kümmert sich um unser Lexikon. Ihr Lieblingssong ist This charming man von The Smiths.
+      esther: 
       franziska: Jest ekspertem prawa międzynarodowego.To znaczy, że wie dużo o prawie, które obowiązuje we wszystkich krajach. Potrafi zrozumieć skomplikowane rzeczy i znaleźć szybko rozwiązanie. W clarat jest w zespole badawczym. Jej ulubionym utworem jest “Explanations” Selah Sue.
       heading: Kto się kryje za claratem?
-      jacinta: Hat Deutsch und Französisch studiert. Ihre Muttersprache ist Englisch. Sie kann gut einfach und klar schreiben. Bei clarat ist sie um Übersetzer-Team und übersetzt clarat ins Englische. Ihr Lieblingssong ist Wannabe von den Spice Girls.
-      jakob: Ist Asien- und Afrikawissenschaftler. Das heißt, er weiß viel über diese Kontinente. Er bleibt auch bei Stress immer ruhig. Bei clarat ist er im Research-Team. Und er sucht im Internet nach Organisationen. Sein Lieblingssong ist Simplicity von Mbarga.
+      jacinta: 
+      jakob: 
       janina: Jest antropologiem kulturowym. To znaczy, że wie dużo o ludziach i kulturach. Potrafi dobrze pisać. W clarat jest w zespole badawczym. Jest ekspertem językowym claratu i pomaga naszym użytkownikom. Jej ulubiony utwór to “MFG” Fanty4.
       janne: Janne studiowała Politykę i Stosunki Międzynarodowe. Potrafi świetnie gospodarować swoim czasem. W clarat jest w zespole badawczym. Ona decyduje, jakie oferty przynależą do claratu. Jej ulubiony utwór to “Sweat” Ry X.
-      jenny: 'Ist Sozialanthropologin. Das heißt, sie weiß viel über Menschen und Kulturen. Sie findet immer eine Lösung. Bei clarat ist sie im Research-Team. Und sie sorgt für Ordnung auf unserer Internetseite. Ihr Lieblingssong ist I sing I swim von Seabear. '
+      jenny: 
       jens: Jest pedagogiem. To znaczy, że zna się na wykształceniu. Szybko pojmuje skomplikowane rzeczy. W clarat jet w zespole badawczym i decyduje jakie oferty wybierze clarat. Jego ulubionym utworem jest “2B2” zespolu Lambchop.
       jule: Jest badaczem pokojowego rozwiązywania konfliktów. Wie dużo o konfliktach i wojnach. Potrafi dobrze znajdować rozwiązania. W clarat jest w zespole badawczym. Zabezpiecza jakość naszej pracy. Jej ulubiony utwór to “Home” Edwarda Sharpe.
       julia: Jest germanistką. To znaczy, że zna się dobrze na tekstach i na języku niemieckim. Potrafi dobrze pisać i łatwo wyjaśniać zagadnienia. W clarat jest w zespole badawczym. Jest też ekspertem językowym claratu. Jej ulubiony utwór to “Reckoner” Radiohead.
       julian: Jest ekonomem społecznym. To znaczy, że wie dużo o gospodarce i społeczeństwie. Zna się też dobrze na komputerach. W clarat jest w zespole badawczym oraz zajmuje się sprawami technicznymi. Jego ulubiony utwór to “All You Need” Sublime.
-      juliane: Hat Betriebswirtschaftslehre und Tourismus studiert. Sie kann gut planen. Und sie findet immer eine Lösung. Bei clarat kümmert sie sich um das Marketing. Ihr Lieblingssong ist Easy von The Commodores.
-      karo: Hat Europawissenschaften studiert. Das heißt, sie weiß viel über europäische Politik. Sie kann gut organisieren. Bei clarat ist sie im Research-Team. Und sie kümmert sich um unser Handbuch. Ihr Lieblingssong ist Alive von Pearl Jam.
+      juliane: 
+      karo: 
       katinka: |-
         Jest psychologiem. To znaczy, że zna się na zachowaniach i uczuciach ludzi. Potrafi uporządkować skomplikowane sprawy.
         W clarat jest w zespole badawczym. Jej ulubiony utwór to “Greatest” Cat Power.
-      katja: Ist Germanistin. Sie kennt sich gut mit komplizierten Texten aus. Und mit der deutschen Sprache. Bei clarat ist sie im Research-Team. Ihr Lieblingssong ist Mysteries von Beth Gibbons.
+      katja: 
       konstantin: Jest web developerem. To znaczy, że potrafi dobrze programować strony internetowe. Zawsze znajduje dobre rozwiązania. W clarat jest w zespole IT i tworzy naszą stronę internetową. Jego ulubionym utworem jest “Too Long” Daft Punk.
-      laura_i: Ist Reiseverkehrskauffrau und Kulturwissenschaftlerin. Sie kann gut organisieren. Sie behält immer den Überblick und sie lernt gern neue Sachen. Bei clarat ist sie im Research-Team. Ihr Lieblingssong ist Proud Mary von Ike und Tina Turner.
+      laura_i: 
       laura_w: Studiowała Nauki o Azji Południowej i Geografię Rozwoju Regionalnego. To znaczy, że zna się na krajach rozwijających się. Zawsze ma dobre rozeznanie. W clarat jest w zespole badawczym. Jej ulubionym utworem jest “Paint in Black” Rolling Stones.
       lavinia: Jest badaczem stosunków pokojowych. Wie dużo o konfliktach i wojnie. Potrafi dobrze przekonywać innych. W clarat jest w zespole badawczym i porządkuje tematycznie oferty. Jej ulubionym utworem  jest “I´m Not Done” Fever Ray.
       line: Jest reżyserką teatralną. Zna się dobrze na literaturze i języku. Dlatego wie jak słowa działają na ludzi. Jej ulubiony utwór to “Anybody Seen My Baby”  Rolling Stones.
       lisa: Jest technikiem designu. To znaczy, że potrafi kreatywnie rozplanować projekty. W clarat zajmuje się planowaniem i użytkownikami. Jej ulubionym utworem jest “Another Day” Jamie Lidell.
       marcus: Jest webdesignerem. To znaczy, że potrafi programować szatę graficzną stron internetowych. Potrafi też dobrze planować. W clarat jest w zespole IT. Dba o to, aby nasza strona internetowa dobrze wyglądała. Jego ulubionym utworem jest “Hysteria” zespolu Muse.
-      michaela: Hat Wirtschaftsinformatik studiert. Sie kann andere Menschen begeistern. Und sie kennt sich gut mit neuen Medien aus. Bei clarat ist sie im Research-Team. Und sie sorgt dafür, dass unsere Internetseite gut funktioniert. Ihr Lieblingssong ist Digital Love von Daft Punk.
-      nahla: 'Ist Archäologin. Sie weiß viel über die Geschichte der Menschheit. Sie kann schnell arbeiten. Bei clarat ist sie im Übersetzter-Team und übersetzt clarat ins Arabische. Ihr Lieblingssong ist Nassam Allina El Hawa von Fayrouz. '
-      nathalie: 'Hat Menschenrechte und internationale Politik studiert. Sie kann gut erklären. Und gut zuhören. Bei clarat ist sie im Research-Team. Ihr Lieblingssong ist Me in You von Kings of Convenience. '
+      michaela: 
+      nahla: 
+      nathalie: 
       nicole: Studiowała komunikację międzykulturową. To znaczy, że wie dużo o kulturze i językach. Potrafi dobrze podejmować decyzje. Jest kierowniczką zespołu badawczego. Jej ulubiony utwór to “Palabra Mi Amor” Shaka Ponk.
       nils: Jest informatykiem. To znaczy, że potrafi dobrze programować strony internetowe i programy komputerowe. Szybko znajduje dobre rozwiązania i szybko się uczy. W clarat jest w zespole IT. Jego ulubiony utwór to “Jein” grupy Fettes Brot.
-      philipp: Hat Geschichte, Politik und Recht studiert. Er weiß viel über Politik und Gesellschaft. Er kann gut komplizierte Sachen verstehen. Bei clarat ist er im Research-Team. Sein Lieblingssong ist This Is Our Science von Astronautalis.
-      sabine: Ist Soziologin. Das heißt, sie weiß viel über die Gesellschaft. Sie kann gut komplizierte Sachen verstehen. Bei clarat ist sie im Research-Team. Und sie erklärt uns die deutschen Asylgesetze. ihr Lieblingssong ist Vesna von Kino.
+      philipp: 
+      sabine: 
       stefan: Jest kulturoznawcą. To znaczy, że wie dużo o kulturze i społeczeństwie. Potrafi świetnie przekonywać ludzi do dobrej sprawy. On jest pomysłodawcą claratu. Jego ulubionym utworem jest “Riders On The Storm” The Doors.
       text: "clarat jest projektem stowarzyszenia użytecznosci publicznej, Stowarzyszenia Benckiser-Przyszłość (www.benckiser-stiftung.org). Przez stowarzyszenie Benckiser promujemy od wielu lat skuteczne projekty rozwojowe dla dzieci i młodzieży. Dlatego zauważyliśmy: Jak trudno jest rozeznać się w istniejących już ofertach pomocy. Ale jedno stało się jasne: Skoro nam “ekspertom” nie jest łatwo się w tym rozeznać, to jak trudne musi to być dla dzieci, młodzieży czy rodzin, które potrzebują pomocy? Albo dla uchodźców, którzy tutaj w Niemczech nie maja jeszcze jakiegokolwiek rozeznania? \nOdpowiedz jest prosta: Bardzo trudno! I stąd zrodził się pomysł na clarat: proste znalezienie pomocy. Dla rodzin: na stronie clarat family. A dla uchodźców: na clarat refugee."
       tine: Jest pedagogiem socjalnym. Potrafi dobrze wsłuchać się w ludzi. Jest również pisarką. To znaczy, że dobrze posługuje się językiem i pisze ładne historie. W clarat jest w zespole badawczym. Jej ulubionym utworem jest “Survive It“ Ghostpoet.
@@ -1255,10 +1255,12 @@ pl:
     definitions: definicje
     emails: e-maile
     faq: często-zadawane-pytania
+    fr: 
     haeufige-fragen: często-zadawane-pytania
     home: 
     impressum: impressum
     liste: 
+    liste-de-services: 
     new: nowe
     offers: oferty
     organizations: organizacje
@@ -1271,7 +1273,6 @@ pl:
     unsubscribe: unsubscribe
     update_requests: odśwież
     users: użytkownicy
-    liste: 
   shareds:
     forms:
       fill_field: Proszę wypełnij to pole
